<resources>
    <string name="app_name">SubmissionAwalIntermediate</string>
    <string name="auth_title">Ayo Tambahkan Ceritamu</string>
    <string name="email_hint">Masukkan Email</string>
    <string name="login_subtitle">Untuk login silahkan masukkan credentials anda</string>
    <string name="hint_password">Masukkan Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="register_disini"><u>Register disini</u></string>
    <string name="hint_name">Masukkan Nama</string>
    <string name="login_disni"><u>Login Disni</u></string>
    <string name="sign_up">SIGN UP</string>
    <string name="regist_subtitle">Untuk register masukkan data anda dibawah ini</string>
    <string name="main_title">Story Terbaru</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>